--- a/shake-wechat.html
+++ b/shake-wechat.html
@@ -15,13 +15,20 @@
     </script>
 </head>
 <body>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
 <script type="text/javascript">
+    function getQueryString(name) {
+        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+        var r = window.location.search.substr(1).match(reg);
+        if (r != null) return unescape(r[2]);
+        return null;
+    }
+
+    var userid = getQueryString('userid');
     var ua = navigator.userAgent.toLowerCase();
-    if (true || ua.indexOf('micromessenger') > -1) {
+    if (true || ua.indexOf('micromessenger') > -1 || userid) {
         var socket = io.connect(BACKEND);
-        socket.emit('register', {userid: 3, name: 'zhangnan111', avatar: "http://wx.qlogo.cn/mmopen/ajNVdqHZLLA3WJ6DSZUfiakYe37PKnQhBIeOQBO4czqrnZDS79FH5Wm5m4X69TBicnHFlhiafvDwklOpZeXYQQ2icg/0"});
-        socket.emit('shake', {userid: 3});
         document.body.innerHTML = '<img width="280px" src="img/shake-bg.png" style="margin-top:20px;margin-bottom:40px"/><div style="font-size:12px;color:white;">技术支持: 小楠科技</div>';
         var color = new Array('#fff', '#ff0', '#f00', '#000', '#00f', '#0ff');
         if (window.DeviceMotionEvent) {
@@ -32,7 +39,7 @@
                 x = acceleration.x;
                 y = acceleration.y;
                 if (Math.abs(x - lastX) > speed || Math.abs(y - lastY) > speed) {
-                    socket.emit('shake', {userid: 3});
+                    socket.emit('shake', {userid: userid});
                 }
                 lastX = x;
                 lastY = y;
