--- a/wall.html
+++ b/wall.html
@@ -3,13 +3,34 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>微信墙 - 云顶年会</title>
-    <link rel="stylesheet" href="css/shake.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/wall/main.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
+    <link href="css/bootstrap-yeti.css" rel="stylesheet">
+    <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 
 <div class="container">
+    <div class="header">
+        <div class="row">
+            <div class="col-md-3 title">
+                <span>云顶科技年会</span>
+                <small><a href="wall.html">微信墙</a> <a href="shake.html">摇一摇</a> <a href="lottery.html">抽奖</a></small>
+            </div>
+            <div class="col-md-7 hudong">
+                <span>关注 云顶科技 企业号<br/>选择 "小二" 进行现场互动</span>
+            </div>
+            <div class="col-md-2 powerby">
+                <img src="img/qr.jpeg" height="100px"/>
+            </div>
+        </div>
+    </div>
     <section class="message">
-        <ul>
+        <ul class="list-unstyled">
+            <li style="height: 180px;line-height: 150px">
+                <p>进入 "云顶科技" 企业号，选择 "小二" 发送消息现场互动</p>
+            </li>
         </ul>
     </section>
 </div>
