--- a/lottery.html
+++ b/lottery.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>抽奖</title>
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/lottery/main.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
     <link href="css/bootstrap-yeti.css" rel="stylesheet">
