--- a/shake.html
+++ b/shake.html
@@ -3,25 +3,51 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>摇一摇 - 云顶年会</title>
-    <link rel="stylesheet" href="css/shake.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/shake/main.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
+    <link href="css/bootstrap-yeti.css" rel="stylesheet">
+    <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 
 <div class="container">
-    <section class="score">
-        获奖者:
-        <ul>
-        </ul>
+    <div class="header">
+        <div class="row">
+            <div class="col-md-3 title">
+                <span>云顶科技年会</span>
+                <small><a href="wall.html">微信墙</a> <a href="shake.html">摇一摇</a> <a href="lottery.html">抽奖</a></small>
+            </div>
+            <div class="col-md-7 hudong">
+                <span>关注 云顶科技 企业号<br/>选择 "小二" 进行现场互动</span>
+            </div>
+            <div class="col-md-2 powerby">
+                <img src="img/qr.jpeg" height="100px"/>
+            </div>
+        </div>
+    </div>
+
+    <section class="shake-wall">
+        <section class="users">
+            <ul class="list-unstyled list-inline">
+            </ul>
+        </section>
+
+        <section class="score">
+            <ul class="list-unstyled">
+            </ul>
+        </section>
+
+        <section class="action">
+            <button class="start btn btn-danger btn-lg">准备开始</button>
+        </section>
+        <div class="timer2"></div>
     </section>
-    <section class="action">
-        <button class="start">准备开始</button>
+
+    <section class="bg" style="display: none">
+        <div class="timer"></div>
     </section>
-    <section class="users">
-        参与者:
-        <ul>
-        </ul>
-    </section>
-    <div class="timer"></div>
+
 </div>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
