--- a/lottery.html
+++ b/lottery.html
@@ -27,7 +27,7 @@
                 <span>关注 云顶科技 企业号<br/>选择 "小二" 进行现场互动</span>
             </div>
             <div class="col-md-2 powerby">
-                <img src="img/qr.jpeg" height="100px"/>
+                <a href="img/qrcode_1280.jpg" ><img src="img/qr.jpeg" height="100px"/></a>
             </div>
         </div>
     </div>
