--- a/wall.html
+++ b/wall.html
@@ -22,11 +22,11 @@
                 <span>关注 云顶科技 企业号<br/>选择 "小二" 进行现场互动</span>
             </div>
             <div class="col-md-2 powerby">
-                <img src="img/qr.jpeg" height="100px"/>
+                <a href="img/qrcode_1280.jpg" ><img src="img/qr.jpeg" height="100px"/></a>
             </div>
         </div>
     </div>
-    <section class="message">
+    <section class="messages">
         <ul class="list-unstyled">
             <li style="height: 180px;line-height: 150px">
                 <p>进入 "云顶科技" 企业号，选择 "小二" 发送消息现场互动</p>
