--- a/shake.html
+++ b/shake.html
@@ -19,10 +19,10 @@
                 <small><a href="wall.html">微信墙</a> <a href="shake.html">摇一摇</a> <a href="lottery.html">抽奖</a></small>
             </div>
             <div class="col-md-7 hudong">
-                <span>关注 云顶科技 企业号<br/>选择 "小二" 进行现场互动</span>
+                <span>关注 淘气网 服务号<br/>直接回复消息(文字/图片) 进行现场互动</span>
             </div>
             <div class="col-md-2 powerby">
-                <a href="img/qrcode_1280.jpg" ><img src="img/qr.jpeg" height="100px"/></a>
+                <a href="img/qrcode_1280.jpg"><img src="img/qr.jpeg" height="100px"/></a>
             </div>
         </div>
     </div>
