--- a/lottery.html
+++ b/lottery.html
@@ -21,13 +21,13 @@
         <div class="row">
             <div class="col-md-3 title">
                 <span>云顶科技年会</span>
-                <small><a href="wall.html">微信墙</a> <a href="shake.html">摇一摇</a> <a href="lottery.html">抽奖</a></small>
+                <small><a href="wall.html">微信墙</a> <a href="lottery.html">抽奖</a></small>
             </div>
             <div class="col-md-7 hudong">
                 <span>扫描右侧二维码参与抽奖->></span>
             </div>
             <div class="col-md-2 powerby">
-                <a href="img/qrcode_1280.jpg"><img src="img/qr.jpeg" height="100px"/></a>
+                <a href="http://nianhui.lngtop.com/api/oauth/qr"><img src="http://nianhui.lngtop.com/api/oauth/qr" height="100px"/></a>
             </div>
         </div>
     </div>
@@ -58,8 +58,7 @@
     </section>
     <hr/>
     <section class="users">
-        <h4>参与名单 <a href="#" class="add"><i class="fa fa-plus"> </i></a>
-            <a href="#" class="update"><i class="fa fa-plus"> </i></a></h4>
+        <h4>参与名单 <a href="#" class="add"><i class="fa fa-plus"> </i></a></h4>
         <ul class="list-inline list-unstyled">
         </ul>
     </section>
