--- a/shake-wechat.html
+++ b/shake-wechat.html
@@ -11,7 +11,7 @@
         }
     </style>
     <script type="text/javascript">
-        BACKEND = 'http://host:port/';
+        BACKEND = 'http://120.55.185.170:3001/api/';
     </script>
 </head>
 <body>
