--- a/wall.html
+++ b/wall.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-3 title">
                 <span>云顶科技年会</span>
-                <small><a href="wall.html">微信墙</a> <a href="shake.html">摇一摇</a> <a href="lottery.html">抽奖</a></small>
+                <small><a href="wall.html">微信墙</a> <a href="lottery.html">抽奖</a></small>
             </div>
             <div class="col-md-7 hudong">
                 <span>关注 淘气网 服务号<br/>直接回复消息(文字/图片) 进行现场互动</span>
